# whatmask

./: AUTHORS  COPYING  Carbon.r  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.Mac-Win  acconfig.h  bitcount.c  bitcount.h  bitfill.c  bitfill.h  config.cache  config.h  config.h.in  config.status  configure  configure.in  ctonm.c  ctonm.h  main.c  main.h  mkinstalldirs  myTypes.h  myname.h  nmtoc.c  octets.c  octets.h  printdata.c  printdata.h  usage.c  usage.h  validatemask.c  validatemask.h  whatmask  whatnet.c  (+3 more)
man/: Makefile  Makefile.am  Makefile.in  whatmask.1
win/: Makefile  Makefile.am  Makefile.in  whatmask.mcp
win/whatmask_Data/: CWSettingsWindows.stg  Makefile  Makefile.am  Makefile.in
win/whatmask_Data/Whatmask_Mac_Debug/: Makefile  Makefile.am  Makefile.in  TargetDataMacOS.tdt
win/whatmask_Data/Whatmask_Mac_Release/: Makefile  Makefile.in  TargetDataMacOS.tdt
win/whatmask_Data/Whatmask_Win_Debug/: Makefile  Makefile.in  TargetDataWindows.tdt
win/whatmask_Data/Whatmask_Win_Release/: Makefile  Makefile.am  Makefile.in  TargetDataWindows.tdt
