SUBDIRS = 	win \
		man

bin_PROGRAMS = whatmask

whatmask_SOURCES = 	main.c \
			main.h \
			ctonm.c \
			ctonm.h \
			nmtoc.c \
			octets.c \
			octets.h \
			printdata.c \
			printdata.h \
			bitcount.c \
			bitcount.h \
			validatemask.c \
			validatemask.h \
			bitfill.c \
			bitfill.h \
			myname.h \
			whatnet.c \
			whatnet.h \
			whatnet_printdata.c \
			whatnet_printdata.h \
			usage.c \
			usage.h \
			myTypes.h


EXTRA_DIST = 		Carbon.r \
			README.Mac-Win
